--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="main_color">#FA7254</color>
     <color name="sub_text_title">#979797</color>
 
+    <color name="play_list_line_color">#ECEEF0</color>
+
+    <color name="play_list_text_color">#7D828C</color>
 </resources>
