--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -47,7 +47,7 @@
             android:layout_centerVertical="true"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
-            android:paddingRight="5dp"
+            android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:src="@mipmap/play_icon" />
 
@@ -62,7 +62,7 @@
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:text="继续播放"
+            android:text="点击播放"
             android:textSize="14sp" />
 
         <TextView
