--- a/app/src/main/res/layout/pop_play_list.xml
+++ b/app/src/main/res/layout/pop_play_list.xml
@@ -9,10 +9,63 @@
     android:orientation="vertical"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"/>
+        android:layout_height="50dp">
+
+        <LinearLayout
+            android:layout_marginLeft="10dp"
+            android:id="@+id/play_list_play_mode_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/play_list_play_mode_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/selector_play_mode_list_revers"/>
+
+            <TextView
+                android:id="@+id/play_list_play_mode_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:textSize="16sp"
+                android:textColor="@color/main_color"
+                android:text="顺序播放"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:id="@+id/play_list_order_container"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal"
+            android:layout_marginRight="20dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/play_list_order_iv"
+                android:layout_width="20dp"
+                android:src="@drawable/selector_play_mode_list_order"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/play_list_order_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="顺序"
+                android:textColor="@color/main_color"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/play_list_rv"
