--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,19 +22,34 @@
             android:paddingRight="10dp"
             />
 
-        <EditText
-            android:id="@+id/search_input"
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:singleLine="true"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:hint="请输入专辑关键字"
-            android:textCursorDrawable="@drawable/shape_edit_text_cursor"
-            android:background="@drawable/shape_edit_text_bg"
-            />
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/search_input"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:singleLine="true"
+                android:paddingLeft="10dp"
+                android:paddingRight="40dp"
+                android:hint="请输入专辑关键字"
+                android:textCursorDrawable="@drawable/shape_edit_text_cursor"
+                android:background="@drawable/shape_edit_text_bg"
+                />
+
+            <ImageView
+                android:id="@+id/search_input_delete"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@mipmap/input_delete_icon"/>
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/search_btn"
@@ -55,12 +70,7 @@
     <FrameLayout
         android:id="@+id/search_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="match_parent"/>
 
-    <com.example.himalaya.views.FlowTextLayout
-        android:id="@+id/flow_text_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"/>
 
 </LinearLayout>
