--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_color">#FA7254</color>
     <color name="sub_text_title">#979797</color>
+    <color name="sub_text_title99">#aaefefef</color>
 
     <color name="play_list_line_color">#ECEEF0</color>
 
