--- a/app/src/main/res/layout/fragment_loading_view.xml
+++ b/app/src/main/res/layout/fragment_loading_view.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/empty_view_tips_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
