--- a/app/src/main/res/layout/item_subscription.xml
+++ b/app/src/main/res/layout/item_subscription.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
     <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
         android:id="@+id/over_scroll_view"
         android:layout_width="match_parent"
-        android:background="#fff4f4f4"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recommend_list"
+            android:id="@+id/sub_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_album_detail"/>
+            android:background="#F4F4F4"
+           />
 
     </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
-
-
 
 
 </RelativeLayout>
