--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -11,7 +11,7 @@
         android:background="#fff4f4f4">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/sub_list"
+            android:id="@+id/history_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never" />
